# maf-eafit

./: pyproject.toml
01_inversiones/beta_alfa_activos/: Beta Ecopetrol.xlsx  beta_ecopetrol.ipynb  ejercicio.ipynb
01_inversiones/portafolio_n_activos/: formulario_respuesta.xlsx  stock_data.ipynb  taller2.ipynb  taller2_adj.ipynb  taller2_rf_avg.ipynb  taller2_rf_last.ipynb
01_inversiones/portafolio_n_activos/activos/: AT&T Stock Price History.csv  Chevron Stock Price History.csv  Coca-Cola Stock Price History.csv  Duke Energy Stock Price History.csv  IVV ETF Stock Price History.csv  J&J Stock Price History.csv  Merck&Co Stock Price History.csv  P&G Stock Price History.csv  Southern Stock Price History.csv  Verizon Stock Price History.csv  Walmart Stock Price History.csv
01_inversiones/renta_fija/: tasa_spot.ipynb
01_inversiones/taller_3/: taller_3_analisis_punto_6.ipynb
