[project]
name = "maf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = ["numpy>=2.4.3", "pandas>=3.0.1", "matplotlib>=3.10.8", "openpyxl>=3.1.5", "pandas-datareader>=0.10.0", "scipy>=1.17.1", "yfinance>=1.2.0", "notebook>=7.5.5", "nbconvert[webpdf]>=7.17.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
